Check for extensions updates

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -509,6 +509,23 @@ a, img {
 
 #toolbar-extension-manager {
     .sprite-icon(0, 0, 24px, 24px, "images/topcoat-plugin-20.svg");
+    position: relative;
+    .notification {
+        font-size: 0.7em;
+        line-height: 1.6em;
+
+        display: inline;
+        background-color: #91CC41;
+        color: white;
+
+        width: 16px;
+        height: 16px;
+        border-radius: 8px;
+
+        position: absolute;
+        right: 0px;
+        top: 0px;
+    }
 }
 
 /* Project panel */
