--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -511,20 +511,17 @@ a, img {
     .sprite-icon(0, 0, 24px, 24px, "images/topcoat-plugin-20.svg");
     position: relative;
     .notification {
-        font-size: 0.7em;
-        line-height: 1.6em;
-
+        font-size: 0;
+        line-height: 1.3em;
         display: inline;
         background-color: #91CC41;
-        color: white;
-
-        width: 16px;
-        height: 16px;
+        color: @bc-white;
+        width: 4px;
+        height: 4px;
         border-radius: 8px;
-
         position: absolute;
-        right: 0px;
-        top: 0px;
+        right: 1px;
+        top: 3px;
     }
 }
 
