--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -508,20 +508,9 @@ a, img {
 }
 
 #toolbar-extension-manager {
-    .sprite-icon(0, 0, 24px, 24px, "images/topcoat-plugin-20.svg");
-    position: relative;
-    .notification {
-        font-size: 0;
-        line-height: 1.3em;
-        display: inline;
-        background-color: #91CC41;
-        color: @bc-white;
-        width: 4px;
-        height: 4px;
-        border-radius: 8px;
-        position: absolute;
-        right: 1px;
-        top: 3px;
+    .sprite-icon(0, 0, 24px, 24px, "images/extension-manager-sprite.svg");
+    &.updatesAvailable {
+        .sprite-icon(0, 24px, 24px, 24px, "images/extension-manager-sprite.svg");
     }
 }
 
